4.x: Fix SchedulerToExecutorService invokeAll and invokeAny impl (#8205)